# jamid

./: .gitignore  package-lock.json  package.json
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/public/: site.webmanifest
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/open-questions/: page.tsx
apps/web/src/app/specs/: page.tsx
apps/web/src/app/whitepaper/: page.tsx
apps/web/src/components/: CodeBlock.tsx  Footer.tsx  Governance.tsx  HashtagGrid.tsx  Header.tsx  Hero.tsx  Overview.tsx  QuestionCard.tsx  Roadmap.tsx  SpecsSection.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Vision.tsx  WhitepaperSection.tsx  WhyItMatters.tsx
apps/web/src/data/: content.json  open-questions.json  specs.json  whitepaper.json
apps/web/src/lib/: constants.ts  db.ts  open-questions.ts  specs.ts  whitepaper.ts
contracts/jamid/: CHANGELOG.md  Cargo.toml  README.md  lib.rs
