[package]
name = "jamid"
version = "0.3.4"
authors = ["Snowinch <https://github.com/snowinch>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = "5.0.0"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
# JAM runtime native signature verification
# When enabled, uses ink::env::sr25519_verify instead of stub
jam = []

[lib]
path = "lib.rs"

